<resources>
    <string name="app_name">AwesomeGroupAlarm</string>

    <!-- 범용적으로 사용할 string resource -->
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <string name="btn_apply">적용</string>

    <string name="all_sunday_one">일</string>
    <string name="all_monday_one">월</string>
    <string name="all_tuesday_one">화</string>
    <string name="all_wednesday_one">수</string>
    <string name="all_thursday_one">목</string>
    <string name="all_friday_one">금</string>
    <string name="all_saturday_one">토</string>

    <!-- LoginFragment 에서 사용할 string resource -->
    <string name="all_id">아이디</string>
    <string name="all_pw">비밀번호</string>
    <string name="login_auto_login">자동로그인</string>
    <string name="all_join">회원가입</string>
    <string name="login_login">로그인</string>

    <!-- JoinFragment 에서 사용할 string resource -->
    <string name="join_btn_next">다음</string>
    <string name="join_btn_finish">완료</string>
    <string name="join_btn_verify">확인</string>
    <string name="join_input_id">아이디를 입력해 주세요</string>
    <string name="join_rule_id">5~20자, 영문 숫자로 이루어져야 합니다.</string>
    <string name="join_input_pw">비밀번호를 입력해 주세요</string>
    <string name="join_rule_pw">8자 이상, 영문, 숫자, 특수문자를 포함해야 합니다.</string>
    <string name="join_input_pw_re">비밀번호 확인</string>
    <string name="join_rule_pw_re_hint">비밀번호를 다시 입력해 주세요.</string>
    <string name="join_rule_pw_re_same">비밀번호가 일치합니다.</string>
    <string name="join_rule_pw_re_non_same">비밀번호가 일치하지 않습니다.</string>
    <string name="join_input_phone">핸드폰 번호를 입력해 주세요</string>
    <string name="join_rule_phone">010-xxxx-xxxx의 형식으로 입력해 주세요.</string>
    <string name="join_btn_validation_code">인증번호 발송</string>
    <string name="join_input_validation_code">인증번호를 입력해 주세요</string>
    <string name="join_input_nickname">닉네임을 입력해 주세요</string>
    <string name="join_rule_nickname">10자 이내, 문자와 숫자로 이루어져야 합니다.</string>


    <!-- BottomNavigation 에서 사용할 string resource -->
    <string name="bottomnav_alarm">알람</string>
    <string name="bottomnav_statistics">통계</string>
    <string name="bottomnav_setting">설정</string>

    <!-- AlarmFragment 에서 사용할 string resource -->
    <string name="alarm_setting_members">알람 설정 현황</string>
    <string name="alarm_no_setting">설정된 시간이 없습니다.</string>

    <!-- AlarmSettingFragment 에서 사용할 string resource -->
    <string name="alarm_setting_sound">알람음</string>
    <string name="alarm_setting_vibrate">진동</string>
    <string name="alarm_setting_repeat">다시 울리기</string>
    <string name="alarm_setting_rain_voice">비 예보 음성 알림</string>
    <string name="alarm_setting_memo_voice">메모 음성 알림</string>
    <string name="alarm_setting_save">저장</string>
    <string name="alarm_setting_no_ring">없음</string>

    <!-- dialog_alarm_create 에서 사용할 string resource -->
    <string name="alarm_title">알람 이름</string>
    <string name="alarm_week_day">요일</string>
    <string name="alarm_cancel">취소</string>
    <string name="alarm_create">생성</string>

    <!-- StatisticsFragment 에서 사용할 string resource -->
    <string name="statistics_period">기간별 통계</string>

    <!-- item_statistics_daily_detail 에서 사용할 string resource -->
    <string name="item_statistics_daily_detail_time">기상 시간</string>
    <string name="item_statistics_daily_detail_mission">기상 미션</string>
    <string name="item_statistics_daily_detail_weather">비 예보 알림</string>
    <string name="item_statistics_daily_detail_memo">메모 알림</string>
    <string name="item_statistics_daily_detail_memo_content">메모 내용</string>

    <!-- SettingFragment 에서 사용할 string resource -->
    <string name="setting_member">멤버</string>
    <string name="setting_change">설정 변경</string>
    <string name="setting_exit_group">그룹 나가기</string>
    <string name="setting_delete_group">그룹 삭제</string>

    <!-- SettingChangeFragment 에서 사용할 string resource -->
    <string name="setting_change_group_name">그룹 이름</string>
    <string name="setting_change_group_introduction">그룹 소개</string>
    <string name="setting_change_group_reg_date">그룹 개설일</string>
    <string name="setting_change_member">멤버</string>

    <!-- Profile에서 사용할 string resource -->
    <string name="profile_info">내 정보</string>
    <string name="profile_change">정보 수정</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_change_password">비밀번호 변경</string>
    <string name="profile_quit">회원 탈퇴</string>
    <string name="profile_id">ID</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_phone">핸드폰번호</string>

    <!-- 비밀번호 변경 Dialog에서 사용할 string resource -->
    <string name="password_change_new_password">새로운 비밀번호를 입력하세요</string>
    <string name="password_change_original_password">기존 비밀번호를 입력하세요</string>

    <!-- 계정 삭제 Dialog에서 사용할 string resource -->
    <string name="delete_account_dialog_check">정말로 계정을 삭제하시겠습니까?</string>

    <!-- 그룹 삭제 Dialog 에서 사용할 string resource -->
    <string name="delete_group_dialog_check">정말로 그룹을 삭제하시겠습니까?\n되돌릴 수 없습니다</string>

    <!-- 그룹 탈퇴 Dialog 에서 사용할 string resource -->
    <string name="exit_group_dialog_check">정말로 그룹에서 나가겠습니까?\n되돌릴 수 없습니다</string>

    <!-- GroupFragment 에서 사용할 string resource -->
    <string name="group_create">생성</string>
    <string name="group_join">참여</string>

    <!-- GroupCreateFragment 에서 사용할 string resource -->
    <string name="group_create_create">그룹생성</string>
    
    <!-- 멤버 클릭 context menu 에서 사용할 string resource -->
    <string name="menu_manage_member_expel">그룹에서 추방</string>
    <string name="menu_manage_member_authorize">권한 부여</string>
    <string name="menu_manage_member_mater">그룹장 위임</string>

    <!-- 초대코드 관련 string resource -->
    <string name="share_invite_title">초대 코드가 발급됐습니다.\n</string>
    <string name="invite_code_msg">기상메이트에서 초대 코드를 공유했습니다.\n그룹 참여에서 초대 코드를 입력해 그룹에 가입하세요.\n\n</string>

    <!-- 그룹 참여 Dialog 에서 사용할 string resource -->
    <string name="join_group_dialog_join_group">공유 받은 초대 코드를 입력하면\n 그룹에 가입됩니다</string>
    <string name="join_group_dialog_enter_code">초대 코드를 입력하세요</string>

</resources>