<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/third"
        android:enabled="true"
        android:icon="@drawable/ic_selector_clock"
        android:title="@string/bottomnav_alarm"
        app:showAsAction="always" />

    <item
        android:id="@+id/statistics"
        android:enabled="true"
        android:icon="@drawable/ic_selector_graph"
        android:title="@string/bottomnav_statistics"
        app:showAsAction="always" />

    <item
        android:id="@+id/second"
        android:enabled="true"
        android:icon="@drawable/ic_selector_setting"
        android:title="@string/bottomnav_setting"
        app:showAsAction="always" />

</menu>