<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileChangeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font_nexon_lv2_gothic_bold"
        android:text="@string/profile_change"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginStart="7dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_id"
                android:textAppearance="@style/Base.AGA.TEXT"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_id"
            style="@style/Base.AGA.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true"
            android:enabled="false"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginStart="7dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_setting_change_group_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_nickname"
                android:textAppearance="@style/Base.AGA.TEXT"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nickname"
            style="@style/Base.AGA.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true"
            app:helperText="@string/join_rule_nickname"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_phone"
                android:textAppearance="@style/Base.AGA.TEXT"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone"
            style="@style/Base.AGA.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true"
            app:helperText="@string/join_rule_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_validation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_validation_code"
            android:textAppearance="@style/Base.AGA.TEXT"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/join_input_validation_code"
            android:textAppearance="@style/Base.AGA.TEXT"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_code"
            style="@style/Base.AGA.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_verify"
            android:textAppearance="@style/Base.AGA.TEXT"
            android:layout_marginTop="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_apply_change"
        style="@style/Base.AGA.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/btn_apply"
        app:icon="@drawable/ic_check"
        app:iconTint="@color/white"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/blue_light_sea" />


</androidx.constraintlayout.widget.ConstraintLayout>